--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -14,6 +14,8 @@
       Add a new board
     </h2>
 
+    <% if current_user != nil%>
+
     <form action="/insert_board" method="post">
       <div>
         <label for="name_box">
@@ -27,6 +29,9 @@
         Add board
       </button>
     </form>
+    <%else%>
+    <p>You must be <a href="/users/sign_up">Sign up</a> signed in to add a board</p>
+    <%end%>
   </div>
 </div>
 
@@ -38,6 +43,11 @@
       <a href="/boards/<%= a_board.id %>">
         <%= a_board.name %>
       </a>
+      <div>
+      <% users_board = User.where(:id => a_board.user_id)[0]%>
+      <%= the_user = users_board.email%>
+      </div>
     </li>
+    <hr>
   <% end %>
 </ul>
