--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,19 +38,17 @@
 
         <input type="date" id="expires_on_box" name="query_expires_on">
       </div>
-
       <div>
         <label for="board_id_box">
           Board
         </label>
-
-        <input type="text" id="board_id_box" name="query_board_id">
+        <input type="text" id="board_id_box" name="query_board_id" >
       </div>
-
       <button>
-        Create post
+        Add post
       </button>
     </form>
+    <hr>
   </div>
 </div>
 
